[project]
name = "convlab"
version = "3.0.2b"
description = "An Open-source Dialog System Toolkit"
authors = [{ name = "convlab" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openpipe-art[langgraph,plotting,skypilot]==0.4.10",
    "boto3>=1.39.4",
    "embeddings>=0.0.8",
    "fuzzywuzzy>=0.18.0",
    "gitpython>=3.1.44",
    "langgraph>=0.5.4", 
    "litellm>=1.74.0.post1",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "openai>=1.61.0",
    "pandas>=2.3.1",
    "polars>=1.33.1",
    "sacrebleu>=2.5.1",
    "sentence-transformers>=5.0.0",
    "tensorboardx>=2.6.4",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "langchain>=0.3.27",
]

[dependency-groups]
dev = ["pytest>=8.4.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"
